tests/pos/i12897/B.scala

package TestFoo

val f = "123".foo() //error